loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:1: error: not found: value x
x=0
^Poucet1:9: error: not found: value x
      x=x+1
      ^Poucet1:12: error: missing parameter type
  if(x=>3)
     ^Poucet1:17: error: not found: value x
  x=0
  ^